[gd_scene load_steps=4 format=3 uid="uid://bdldxaka32a6w"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_427ti"]
[ext_resource type="Texture2D" uid="uid://iwa2fq84sdrv" path="res://assets/art/Tilemap/title_screen.png" id="3_ahafd"]
[ext_resource type="StyleBox" uid="uid://dtbi1sq0ahxe" path="res://assets/art/ui/pink_button_style.tres" id="7_2blsd"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("level_choices", "credits") groups=["level_loader"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_427ti")
level_choices = NodePath("MarginContainer/HBoxContainer/LevelChoices")
credits = NodePath("MarginContainer/HBoxContainer/Credits")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ahafd")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "C:/Asesprite/Projects/speedjam/background/title_screen.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "4b31be967e28a08195d1aa5fedb8c6f6"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Start"

[node name="choose_level" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
text = "Choose Level"

[node name="credits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
text = "Credits"

[node name="leaderboard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Leaderboard"

[node name="LevelChoices" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Credits" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Credits"]
custom_minimum_size = Vector2(234.89, 0)
layout_mode = 2
text = "Art - Pontax
Coding - Caaz, ArturGinRad
SFX & Music - Joe"
horizontal_alignment = 1
autowrap_mode = 2

[node name="end_screen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="end_screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="end_screen/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="end_screen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "the end!"
horizontal_alignment = 1

[node name="total_time" type="Label" parent="end_screen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Your total time:"
horizontal_alignment = 1

[node name="submit_time" type="Button" parent="end_screen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("7_2blsd")
text = "Submit"

[node name="Label2" type="Label" parent="end_screen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Thanks for playing!"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/choose_level" to="." method="_on_choose_level_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/credits" to="." method="_on_credits_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="end_screen/CenterContainer/VBoxContainer/submit_time" to="." method="_on_submit_time_pressed"]
